unpackaged/main/default/objects/Product2/fields/ProductID__c.field-meta.xml
<CustomField>
    <fullName>ProductID__c</fullName>
    <description>Used as searchable field for Product Id information</description>
    <externalId>true</externalId>
    <label>Product ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>