unpackaged/main/default/objects/Product2/fields/Purchased_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Quantity__c</fullName>
    <label>Purchased Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>