unpackaged/main/default/objects/Product2/fields/Quantity_Declarative__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Declarative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quantity Declarative</label>
    <type>Checkbox</type>
</CustomField>