unpackaged/main/default/objects/Product2/fields/Quantity_related_to_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Quantity_related_to_Unit_of_Measure__c</fullName>
    <label>Quantity related to Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hour</fullName>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Flat Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>