unpackaged/main/default/objects/Product2/fields/Realization_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Realization_Conditions__c</fullName>
    <label>Realization Conditions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>University</fullName>
            </value>
            <value>
                <fullName>On Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>