unpackaged/main/default/objects/Product2/fields/recurring_purchase__c.field-meta.xml
<CustomField>
    <fullName>recurring_purchase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recurring purchase</label>
    <type>Checkbox</type>
</CustomField>