unpackaged/main/default/objects/Product2/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <description>Numéro de référence du produit</description>
    <formula>IF(CONTAINS(ProductID__c , 'GENERIC'), ProductID__c, IF(RecordType.DeveloperName = 'Package', 'K'+ ReferenceSequence__c, Left(RecordType.DeveloperName,1)+ ReferenceSequence__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product ID</label>
    <type>Text</type>
</CustomField>