unpackaged/main/default/objects/Product2/fields/ReferenceSequence__c.field-meta.xml
<CustomField>
    <fullName>ReferenceSequence__c</fullName>
    <displayFormat>{0000000}</displayFormat>
    <label>Reference Sequence</label>
    <type>AutoNumber</type>
</CustomField>