unpackaged/main/default/objects/Product2/fields/RemunerationPercentage__c.field-meta.xml
<CustomField>
    <fullName>RemunerationPercentage__c</fullName>
    <label>Remuneration Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>