unpackaged/main/default/objects/Product2/fields/Saas_Dedicated__c.field-meta.xml
<CustomField>
    <fullName>Saas_Dedicated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>identifier au niveau de l’Order si le client a commandé un solution Saas Dédiée afin de pouvoir correctement lui adresser la communication adéquate dans le cadre de la campagne d’Onboarding.</description>
    <label>Saas Dedicated</label>
    <type>Checkbox</type>
</CustomField>