unpackaged/main/default/objects/Product2/fields/SaaS_production_code__c.field-meta.xml
<CustomField>
    <fullName>SaaS_production_code__c</fullName>
    <description>Code qui lors du passage d'une commande est transmis aux services de provisionning adéquat.</description>
    <label>SaaS production code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>