unpackaged/main/default/objects/Product2/fields/Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel__c</fullName>
    <label>Sales Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Store Only</fullName>
            </value>
            <value>
                <fullName>CPQ Only</fullName>
            </value>
            <value>
                <fullName>Store/CPQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>