unpackaged/main/default/objects/Product2/fields/Sales_Purposes__c.field-meta.xml
<CustomField>
    <fullName>Sales_Purposes__c</fullName>
    <description>This field is linked to the filter done with “Add Product” button in quote”</description>
    <inlineHelpText>This field is linked to the filter done with “Add Product” button in quote”</inlineHelpText>
    <label>Quote's Sales Purpose</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Purpose</valueSetName>
    </valueSet>
</CustomField>