unpackaged/main/default/objects/Product2/fields/Salesforce_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Id__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesforce Id</label>
    <type>Text</type>
</CustomField>