unpackaged/main/default/objects/Product2/fields/Schedulable__c.field-meta.xml
<CustomField>
    <fullName>Schedulable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Planifiable</description>
    <label>Schedulable</label>
    <type>Checkbox</type>
</CustomField>