unpackaged/main/default/objects/Product2/fields/Serialization_type__c.field-meta.xml
<CustomField>
    <fullName>Serialization_type__c</fullName>
    <label>Serialization type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>000</fullName>
                <label>PGI Séria</label>
            </value>
            <value>
                <fullName>001</fullName>
                <label>Gamme II</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>CD Key CEGID</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>CD Key LOGAM</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>Jeton DK - Etafi</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>Jeton DK - CCMX</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>Code CD Gamme</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>CD Key VCS</label>
            </value>
            <value>
                <fullName>008</fullName>
                <label>VERIF DROITS</label>
            </value>
            <value>
                <fullName>009</fullName>
                <label>Visa</label>
            </value>
            <value>
                <fullName>999</fullName>
                <default>true</default>
                <label>Sans</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>