unpackaged/main/default/objects/Product2/fields/SerializedVersion__c.field-meta.xml
<CustomField>
    <fullName>SerializedVersion__c</fullName>
    <description>Project Service Now.
Version de serialisation. Élement de calcul de la SERIA.</description>
    <label>Serialized Version</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>