unpackaged/main/default/objects/Product2/fields/Service_Book__c.field-meta.xml
<CustomField>
    <fullName>Service_Book__c</fullName>
    <label>Service Book</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>