unpackaged/main/default/objects/Product2/fields/Service_Levels__c.field-meta.xml
<CustomField>
    <fullName>Service_Levels__c</fullName>
    <label>Service Levels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ServiceLevel</valueSetName>
    </valueSet>
</CustomField>