unpackaged/main/default/objects/Product2/fields/Service_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Service_Parameter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Parameter</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Article</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Service_Parameter__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>