unpackaged/main/default/objects/Product2/fields/Service_Term__c.field-meta.xml
<CustomField>
    <fullName>Service_Term__c</fullName>
    <description>Modalité de la prestation</description>
    <label>Service Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Term</valueSetName>
    </valueSet>
</CustomField>