unpackaged/main/default/objects/Product2/fields/ShortDescription__c.field-meta.xml
<CustomField>
    <fullName>ShortDescription__c</fullName>
    <label>Short Description</label>
    <type>TextArea</type>
</CustomField>