unpackaged/main/default/objects/Product2/fields/Software_Reference__c.field-meta.xml
<CustomField>
    <fullName>Software_Reference__c</fullName>
    <label>Software Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>