unpackaged/main/default/objects/Product2/fields/SolutionRange__c.field-meta.xml
<CustomField>
    <fullName>SolutionRange__c</fullName>
    <label>Solution Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1010</fullName>
                <label>Cegid Expert</label>
            </value>
            <value>
                <fullName>1020</fullName>
                <label>Quadra Expert</label>
            </value>
            <value>
                <fullName>1030</fullName>
                <label>Jedeclare.com</label>
            </value>
            <value>
                <fullName>1035</fullName>
                <label>Cegid Formalités</label>
            </value>
            <value>
                <fullName>1040</fullName>
                <label>EWS</label>
            </value>
            <value>
                <fullName>1041</fullName>
                <label>CWE</label>
            </value>
            <value>
                <fullName>1050</fullName>
                <label>Wexperandyou</label>
            </value>
            <value>
                <fullName>1055</fullName>
                <label>TDA</label>
            </value>
            <value>
                <fullName>1070</fullName>
                <label>Ccmx Expert</label>
            </value>
            <value>
                <fullName>1075</fullName>
                <label>Ccmx Winner Cabinet</label>
            </value>
            <value>
                <fullName>1080</fullName>
                <label>Ccmx Expert 400</label>
            </value>
            <value>
                <fullName>1090</fullName>
                <label>Cegid Gamme II PCL</label>
            </value>
            <value>
                <fullName>1095</fullName>
                <label>Logam</label>
            </value>
            <value>
                <fullName>1100</fullName>
                <label>Ccmx DialBank</label>
            </value>
            <value>
                <fullName>1110</fullName>
                <label>Lion Dialogue</label>
            </value>
            <value>
                <fullName>1210</fullName>
                <label>Cegid Agrément</label>
            </value>
            <value>
                <fullName>1220</fullName>
                <label>Cegid Gamme II OGA</label>
            </value>
            <value>
                <fullName>2010</fullName>
                <label>Yourcegid CB</label>
            </value>
            <value>
                <fullName>2011</fullName>
                <label>Yourcegid CB Place</label>
            </value>
            <value>
                <fullName>2012</fullName>
                <label>Yourcegid CB Suite</label>
            </value>
            <value>
                <fullName>2020</fullName>
                <label>Quadra Entreprise</label>
            </value>
            <value>
                <fullName>2021</fullName>
                <label>Quadra Propreté</label>
            </value>
            <value>
                <fullName>2025</fullName>
                <label>Syges</label>
            </value>
            <value>
                <fullName>2030</fullName>
                <label>Ccmx Win Winner</label>
            </value>
            <value>
                <fullName>2040</fullName>
                <label>Servant</label>
            </value>
            <value>
                <fullName>2050</fullName>
                <label>Ccmx Entreprise</label>
            </value>
            <value>
                <fullName>2060</fullName>
                <label>Ccmx Finance</label>
            </value>
            <value>
                <fullName>2070</fullName>
                <label>Ccmx Winner PME</label>
            </value>
            <value>
                <fullName>2080</fullName>
                <label>Cegid Gamme II ENT</label>
            </value>
            <value>
                <fullName>3015</fullName>
                <label>Yourcegid Solos</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>