unpackaged/main/default/objects/Product2/fields/Store_Educational_objective__c.field-meta.xml
<CustomField>
    <fullName>Store_Educational_objective__c</fullName>
    <label>Store Educational objective</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>