unpackaged/main/default/objects/Product2/fields/Store_Included_Themes__c.field-meta.xml
<CustomField>
    <fullName>Store_Included_Themes__c</fullName>
    <label>Store Included Themes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>