unpackaged/main/default/objects/Product2/fields/Store_Pre_requisite_public__c.field-meta.xml
<CustomField>
    <fullName>Store_Pre_requisite_public__c</fullName>
    <label>Store Pre-requisite &amp; public</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>