unpackaged/main/default/objects/Product2/fields/Store_Training_Carousel_3__c.field-meta.xml
<CustomField>
    <fullName>Store_Training_Carousel_3__c</fullName>
    <label>Store Training Carousel 3</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>