unpackaged/main/default/objects/Product2/fields/Storelinktoeducationalobjective_file__c.field-meta.xml
<CustomField>
    <fullName>Storelinktoeducationalobjective_file__c</fullName>
    <label>Store link to educational objective file</label>
    <type>Url</type>
</CustomField>