unpackaged/main/default/objects/Product2/fields/Structure_Level_2_Discount_Max_Manager__c.field-meta.xml
<CustomField>
    <fullName>Structure_Level_2_Discount_Max_Manager__c</fullName>
    <description>Used to fill in the maximal discount allowed for each 'Structure Level 1' value, for the Validation Group Level 3</description>
    <label>Structure Level 1 Discount Max - Level 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Family</controllingField>
        <restricted>true</restricted>
        <valueSetName>Discount_Max</valueSetName>
    </valueSet>
</CustomField>