unpackaged/main/default/objects/Product2/fields/StructureLevel2__c.field-meta.xml
<CustomField>
    <fullName>StructureLevel2__c</fullName>
    <description>Structure d'activité NIV 2</description>
    <label>StructureLevel2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Family</controllingField>
        <restricted>true</restricted>
        <valueSetName>StructureLevel2</valueSetName>
    </valueSet>
</CustomField>