unpackaged/main/default/objects/Product2/fields/Subscription_Term_Editable_in_Quotes__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Term_Editable_in_Quotes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>W-1357</description>
    <label>Subscription Term Editable in Quotes</label>
    <type>Checkbox</type>
</CustomField>