unpackaged/main/default/objects/Product2/fields/SubscriptionLength__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionLength__c</fullName>
    <label>Subscription Length</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PricingModel__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 month</fullName>
            </value>
            <value>
                <fullName>3 months</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
            <value>
                <fullName>1 year</fullName>
            </value>
            <value>
                <fullName>2 years</fullName>
            </value>
            <value>
                <fullName>3 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>