unpackaged/main/default/objects/Product2/fields/Supplier_ID__c.field-meta.xml
<CustomField>
    <fullName>Supplier_ID__c</fullName>
    <label>Supplier ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>