unpackaged/main/default/objects/Product2/fields/Synchronisation_Zuora__c.field-meta.xml
<CustomField>
    <fullName>Synchronisation_Zuora__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champs renseigné par Mulesoft après la synchro</description>
    <label>IS Synchro</label>
    <type>Checkbox</type>
</CustomField>