unpackaged/main/default/objects/Product2/fields/Synchronization_Date_Zuora__c.field-meta.xml
<CustomField>
    <fullName>Synchronization_Date_Zuora__c</fullName>
    <description>Date de la dernière synchronisation entre Zuora et salesforce</description>
    <label>IS Synchro Date</label>
    <type>Date</type>
</CustomField>