unpackaged/main/default/objects/Product2/fields/TECH_ConversionRate__c.field-meta.xml
<CustomField>
    <fullName>TECH_ConversionRate__c</fullName>
    <formula>CURRENCYRATE(TEXT(CurrencyIsoCode))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>