unpackaged/main/default/objects/Product2/fields/Tech_CPQ_Id__c.field-meta.xml
<CustomField>
    <fullName>Tech_CPQ_Id__c</fullName>
    <externalId>true</externalId>
    <label>Tech CPQ Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>