unpackaged/main/default/objects/Product2/fields/TECH_Display_EndOfComm__c.field-meta.xml
<CustomField>
    <fullName>TECH_Display_EndOfComm__c</fullName>
    <formula>AND(RecordTypeId = '0121t000000EJK2',
    Tech_IsLinkedToPackage__c,
    NOT(ISNULL( End_of_Commercialization__c)))</formula>
    <label>TECH_Display_EndOfComm</label>
    <type>Checkbox</type>
</CustomField>