unpackaged/main/default/objects/Product2/fields/TECH_Dure__c.field-meta.xml
<CustomField>
    <fullName>TECH_Dure__c</fullName>
    <description>B2B - PLP</description>
    <formula>' | '+'Durée:'+' '+ IF(Duration__c &lt; 1, '0'+TEXT(Duration__c), TEXT(Duration__c)) +' '+CASE(Service_Term__c, 'Days', 'Jour(s)', 'Hours', 'Heure(s)', 'Flat Fee', 'Forfait','')+' | '</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_Duree</label>
    <type>Text</type>
</CustomField>