unpackaged/main/default/objects/Product2/fields/TECH_ExcessMethodCappedDisplayWarning__c.field-meta.xml
<CustomField>
    <fullName>TECH_ExcessMethodCappedDisplayWarning__c</fullName>
    <formula>AND( ISPICKVAL( Excess_Pricing_Method__c, 'Capped Unit Price' ), 
     Main_Charge_Product__r.Maximum_Quantity__c == 0, 
     TECH_SLPwithAMaximumPriceRecorded__c = 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_ExcessMethodCappedDisplayWarning</label>
    <type>Checkbox</type>
</CustomField>