unpackaged/main/default/objects/Product2/fields/Tech_HasOnSiteArticle__c.field-meta.xml
<CustomField>
    <fullName>Tech_HasOnSiteArticle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>W-001172 - if true, replicate Tech_HasOnSiteArticle__c from SBQQ__ProductOption__c  onto product2</description>
    <label>Tech_HasOnSiteArticle</label>
    <type>Checkbox</type>
</CustomField>