unpackaged/main/default/objects/Product2/fields/Tech_IsLinkedToPackage__c.field-meta.xml
<CustomField>
    <fullName>Tech_IsLinkedToPackage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_IsLinkedToPackage</label>
    <type>Checkbox</type>
</CustomField>