unpackaged/main/default/objects/Product2/fields/TECH_NameAndDesc__c.field-meta.xml
<CustomField>
    <fullName>TECH_NameAndDesc__c</fullName>
    <label>TECH_Name And Desc</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>