unpackaged/main/default/objects/Product2/fields/Tech_ParentHasOnSiteArticle__c.field-meta.xml
<CustomField>
    <fullName>Tech_ParentHasOnSiteArticle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_ParentHasOnSiteArticle</label>
    <type>Checkbox</type>
</CustomField>