unpackaged/main/default/objects/Product2/fields/TECH_SLPwithAMaximumPriceRecorded__c.field-meta.xml
<CustomField>
    <fullName>TECH_SLPwithAMaximumPriceRecorded__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TECH_SLPwithAMaximumPriceRecorded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>