unpackaged/main/default/objects/Product2/fields/TechnicalComment__c.field-meta.xml
<CustomField>
    <fullName>TechnicalComment__c</fullName>
    <description>Project: Service Now.
Description sur l'article dans CPQ qui alimente une Work_note dans l'article SN</description>
    <label>Technical Comment</label>
    <type>TextArea</type>
</CustomField>