unpackaged/main/default/objects/Product2/fields/TECHServiceBook__c.field-meta.xml
<CustomField>
    <fullName>TECHServiceBook__c</fullName>
    <label>TECH_Service Book</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>