unpackaged/main/default/objects/Product2/fields/TemporaryLicenceLifetime__c.field-meta.xml
<CustomField>
    <fullName>TemporaryLicenceLifetime__c</fullName>
    <description>Project: Service Now.
Durée de vie en jours dans le parc pour les licences temporaires (ex : license pour stagiaire)</description>
    <label>Temporary Licence Lifetime</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>