unpackaged/main/default/objects/Product2/fields/Training_Billing__c.field-meta.xml
<CustomField>
    <fullName>Training_Billing__c</fullName>
    <label>Training Billing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advance</fullName>
            </value>
            <value>
                <fullName>Arreas</fullName>
            </value>
            <value>
                <fullName>No Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>