unpackaged/main/default/objects/Product2/fields/TrainingDescription__c.field-meta.xml
<CustomField>
    <fullName>TrainingDescription__c</fullName>
    <formula>IF
(
    ISBLANK(Max_Trainee__c),
    Description,
    Description + BR() + $Label.CPQ_TrainingDescription + " " + TEXT(Max_Trainee__c)
)</formula>
    <label>Training Description</label>
    <type>Text</type>
</CustomField>