unpackaged/main/default/objects/Product2/fields/Transversal_Theme_Discount_Max_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Transversal_Theme_Discount_Max_Level_2__c</fullName>
    <description>Used to fill in the maximal discount allowed for the 'Transversal Theme' line, for the Validation Group Level 2</description>
    <label>Transversal Theme Discount Max - Level 2</label>
    <length>5</length>
    <type>Text</type>
</CustomField>