unpackaged/main/default/objects/Product2/fields/TypeOfProduct__c.field-meta.xml
<CustomField>
    <fullName>TypeOfProduct__c</fullName>
    <defaultValue>LEFT($RecordType.Name , 1)</defaultValue>
    <description>Type of product from CEGID's point of view</description>
    <inlineHelpText>A for Article
P for Product
T for Tier</inlineHelpText>
    <label>TypeOfProduct</label>
    <length>1</length>
    <type>Text</type>
</CustomField>