unpackaged/main/default/objects/Product2/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <defaultValue>TEXT(YEAR(TODAY()))
+ LPAD(TEXT(MONTH(TODAY())),2,"0")
+ LPAD(TEXT(DAY(TODAY())),2,"0")
+ "-V1.0"</defaultValue>
    <label>Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>