unpackaged/main/default/objects/Product2/fields/Version_Comment__c.field-meta.xml
<CustomField>
    <fullName>Version_Comment__c</fullName>
    <label>Version Comment</label>
    <type>TextArea</type>
</CustomField>