unpackaged/main/default/objects/Product2/fields/Versionable__c.field-meta.xml
<CustomField>
    <fullName>Versionable__c</fullName>
    <description>Project: Service Now.
Version de l'article</description>
    <label>Versionable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>