unpackaged/main/default/objects/Product2/fields/WebVisible__c.field-meta.xml
<CustomField>
    <fullName>WebVisible__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Project: Service Now.
Visibilité de l'article dans le parc tel qu'il est affiché pour le client</description>
    <label>Web Visible</label>
    <type>Checkbox</type>
</CustomField>