unpackaged/main/default/objects/Product2/recordTypes/Charge.recordType-meta.xml
<RecordType>
    <fullName>Charge</fullName>
    <active>true</active>
    <label>Charge</label>
</RecordType>