unpackaged/main/default/objects/Product2/recordTypes/Tier.recordType-meta.xml
<RecordType>
    <fullName>Tier</fullName>
    <active>false</active>
    <label>Tier</label>
</RecordType>