unpackaged/main/default/objects/Product2/validationRules/DescriptionLengthControl.validationRule-meta.xml
<ValidationRule>
    <fullName>DescriptionLengthControl</fullName>
    <active>true</active>
    <description>W-001885 le champ ne peut pas dépasser 500 caractère</description>
    <errorConditionFormula>LEN(Description  ) &gt;500</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>Product Description cannot exceed 500 caracters</errorMessage>
</ValidationRule>