unpackaged/main/default/objects/Product2/validationRules/End_of_Commercialization_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>End_of_Commercialization_Date_Check</fullName>
    <active>false</active>
    <description>Check if the date is correct considering the following business rule : the end of commercialization date can't be inferior to the current date + 31 days (maximum period of a quote validity)</description>
    <errorConditionFormula>End_of_Commercialization__c &lt; (DATEVALUE(NOW()) + 31)</errorConditionFormula>
    <errorDisplayField>End_of_Commercialization__c</errorDisplayField>
    <errorMessage>The end of commercialization date can't be inferior to the current date + 31 days (maximum period of a quote validity)</errorMessage>
</ValidationRule>